grammar.txt
============
  Examples  
============

1.
A[i] == B[j], A[i] >= B[j]

2.
A[i,k] == B[k,j]

3.
A[i] + B[k] >= C[i]

4.
min(A[i], B[j]) >= max(E[i], D[j])

5.
5 * A[i] < B[C[j]] + 2

===========
  Grammar  
===========

<query>     ::= <q_expr>
              | <query>, <q_expr>

<q_expr>    ::= <expr> <q_op> <expr>

<expr>      ::= <constant>
              | <func>(<expr>, <expr>)
              | <expr> <bin_op> <expr>
              | <access>

<access>    ::= <tensor>[{<position>},+]  ; {},+ here represents a nonempty comma separated list.

<position>  ::= <access> | <index>

<bin_op>    ::= + | - | *

<func>      ::= min | max
